crates/ruff_python_parser/src/parser/tests/snapshots/ruff_python_parser__parser__tests__context__tests__del_attribute.snap
---
source: crates/ruff_python_parser/src/parser/tests/context.rs
expression: parse_ast
---
[
    Delete(
        StmtDelete {
            range: 0..7,
            targets: [
                Attribute(
                    ExprAttribute {
                        range: 4..7,
                        value: Name(
                            ExprName {
                                range: 4..5,
                                id: "x",
                                ctx: Load,
                            },
                        ),
                        attr: Identifier {
                            id: "y",
                            range: 6..7,
                        },
                        ctx: Del,
                    },
                ),
            ],
        },
    ),
]
