crates/ruff_python_parser/src/parser/tests/snapshots/ruff_python_parser__parser__tests__context__tests__del_name.snap
---
source: crates/ruff_python_parser/src/parser/tests/context.rs
expression: parse_ast
---
[
    Delete(
        StmtDelete {
            range: 0..5,
            targets: [
                Name(
                    ExprName {
                        range: 4..5,
                        id: "x",
                        ctx: Del,
                    },
                ),
            ],
        },
    ),
]
