crates/ruff_python_parser/src/parser/tests/snapshots/ruff_python_parser__parser__tests__context__tests__del_subscript.snap
---
source: crates/ruff_python_parser/src/parser/tests/context.rs
expression: parse_ast
---
[
    Delete(
        StmtDelete {
            range: 0..8,
            targets: [
                Subscript(
                    ExprSubscript {
                        range: 4..8,
                        value: Name(
                            ExprName {
                                range: 4..5,
                                id: "x",
                                ctx: Load,
                            },
                        ),
                        slice: Name(
                            ExprName {
                                range: 6..7,
                                id: "y",
                                ctx: Load,
                            },
                        ),
                        ctx: Del,
                    },
                ),
            ],
        },
    ),
]
